--- a/cherryWeb/WebApplication1/Site.Master
+++ b/cherryWeb/WebApplication1/Site.Master
@@ -4,20 +4,23 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head runat="server">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title></title>
+
+   <title> 
+   
+   
+    </title>
     <link href="~/Styles/Site.css" rel="stylesheet" type="text/css" />
     <asp:ContentPlaceHolder ID="HeadContent" runat="server">
+   
     </asp:ContentPlaceHolder>
 </head>
 <body>
     <form runat="server">
     <div class="page">
         <div class="header" align="center" 
-            style="top: auto; left: auto; bottom: auto; right: auto;">
-            <div class="title">
-                <h1>
-                    LOGOTIPO</h1>
-            </div>
+            style="top: auto; left: auto; bottom: auto; right: auto;" >
+            <img alt="" src="/Imagenes/Android2.jpg" style="height: 100%; width: 100%" />
+   
         </div> 
         <div class="clear hideSkiplink">
                 <asp:Menu ID="Menu1" runat="server" CssClass="menu" EnableViewState="false" IncludeStyleBlock="false" Orientation="Horizontal">
