--- a/cherryWeb/WebApplication1/Styles/Site.css
+++ b/cherryWeb/WebApplication1/Styles/Site.css
@@ -99,7 +99,6 @@ first child of the left and right table columns */
     position: relative;
     margin: 0px;
     padding: 0px;
-    background: #4b6c9e;
     width: 100%;
     top: 4px;
     left: 1px;
@@ -151,7 +150,7 @@ first child of the left and right table columns */
 
 div.hideSkiplink
 {
-    background-color:#3a4f63;
+    background-color:#000000;
     width:100%;
 }
 
@@ -256,7 +255,7 @@ div.accountInfo
     display: block;
     float: left;
     text-align: left;
-    width: 957px;
+    width: 600px;
 }
 
 .loginDisplay
