--- a/cherryWeb/WebApplication1/Site.Master
+++ b/cherryWeb/WebApplication1/Site.Master
@@ -2,6 +2,7 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+
 <head runat="server">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
@@ -9,7 +10,9 @@
    
    
     </title>
-    <link href="~/Styles/Site.css" rel="stylesheet" type="text/css" />
+    
+    <link href="Stilo/Stilo.css" rel="stylesheet" type="text/css" />
+   
     <asp:ContentPlaceHolder ID="HeadContent" runat="server">
    
     </asp:ContentPlaceHolder>
@@ -22,8 +25,8 @@
             <img alt="" src="/Imagenes/Android2.jpg" style="height: 100%; width: 100%" />
    
         </div> 
-        <div class="clear hideSkiplink">
-                <asp:Menu ID="Menu1" runat="server" CssClass="menu" EnableViewState="false" IncludeStyleBlock="false" Orientation="Horizontal">
+        <div class="clear hideSkiplink" >
+                <asp:Menu ID="Menu1" runat="server" CssClass="menu" EnableViewState="false" IncludeStyleBlock="false" Orientation="Horizontal"  >
                     <Items>
                         <asp:MenuItem NavigateUrl="~/Inicio.aspx" Text="Inicio" Value="Inicio"/>
                         <asp:MenuItem Text="Aplicaciones" Value="Aplicaciones" 
