--- a/cherryWeb/WebApplication1/Site.Master
+++ b/cherryWeb/WebApplication1/Site.Master
@@ -45,7 +45,7 @@
         </div>
     </div>
     <div class="footer">
-        DESIGNED BY RAULONG</div>
+        DESIGNED BY CHENDILONG</div>
     </form>
 </body>
 </html>
